# weston_apps

./: CMakeLists.txt  README.md  wayland-model.mdj
cmake/: FindCairo.cmake  FindEGL.cmake  FindEXPAT.cmake  FindEudev.cmake  FindFontconfig.cmake  FindFreeGLUT.cmake  FindFreetype.cmake  FindGLES.cmake  FindGLESV1.cmake  FindGLESV2.cmake  FindGLEW.cmake  FindGStreamer1.cmake  FindGTEST.cmake  FindLibDRM.cmake  FindLibEvdev.cmake  FindLibFFI.cmake  FindLibGBM.cmake  FindLibGlib2.cmake  FindLibInput.cmake  FindLibJPEGTurbo.cmake  FindLibPNG.cmake  FindLibX11.cmake  FindLibXKBCommon.cmake  FindLibXau.cmake  FindLibXcb.cmake  FindLibXcbDri2.cmake  FindLibXcbGlx.cmake  FindLibXcbRender.cmake  FindLibXcbShm.cmake  FindLibXcbXfixes.cmake  FindLibXdmcp.cmake  FindLibXml2.cmake  FindMtdev.cmake  FindOpenGL.cmake  FindPixman.cmake  FindPkgConfig.cmake  FindSDL2.cmake  FindWayland.cmake  FindWaylandEGL.cmake  FindWaylandProtocols.cmake  (+5 more)
cmake_package_builder/: CMakeLists.txt  Executable.cpp  Executable.h  GenCMakeLists.cpp  GenCMakeLists.h  Generator.cpp  Generator.h  Library.cpp  Library.h  ObjectSet.cpp  ObjectSet.h  Project.cpp  Project.h  Target.cpp  Target.h  Util.cpp  Util.h  main.cpp
cmake_package_builder/templates/: main_header_template.txt
cmake_package_builder/test/: CMakeLists.txt  ExecutableTest.cpp  GeneratorTest.cpp  LibraryTest.cpp  ObjectSetTest.cpp  ProjectTest.cpp
hello-wayland/: Application.cpp  Application.h  Buffer.cpp  CMakeLists.txt  Compositor.cpp  Compositor.h  Display.cpp  Display.h  IRegistryListener.h  Pointer.cpp  Pointer.h  Registry.cpp  Registry.h  ShmPool.cpp  ShmPool.h  Surface.cpp  helpers.h  main.cpp  uninstall.cmake.in
hello-wayland-org/: CMakeLists.txt
kylin-hdmi-info/: CMakeLists.txt  main.cpp
kylin-simple-app/: CMakeLists.txt
ogl-OpenGL-tutorial_0015_21/: CMakeLists.txt
ogl-OpenGL-tutorial_0015_21/playground/: Application.cpp  Application.h  Shader.cpp  Shader.h  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  VAO.cpp  VAO.h  playground.cpp
testdata/templates/: main_header_template.txt  main_header_template_simple.txt
wayland-1.13.0/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  wayland-scanner
wayland-1.13.0/cursor/: .gitignore  wayland-cursor-uninstalled.pc  wayland-cursor.pc
wayland-1.13.0/doc/: Makefile  Makefile.in
wayland-1.13.0/doc/doxygen/: Makefile  Makefile.in
wayland-1.13.0/doc/doxygen/man/man3/: wl_argument.3  wl_array.3  wl_buffer.3  wl_client.3  wl_client_add_resource.3  wl_display.3  wl_display_poll.3  wl_event_queue.3  wl_global.3  wl_interface.3  wl_list.3  wl_list_length.3  wl_listener.3  wl_message.3  wl_object.3  wl_protocol_logger.3  wl_protocol_logger_message.3  wl_proxy.3  wl_proxy_create_wrapper.3  wl_resource.3  wl_resource_for_each_safe.3  wl_resource_iterator_context.3  wl_shm_buffer.3  wl_shm_pool.3  wl_shm_sigbus_data.3  wl_shm_sigbus_data_key.3  wl_signal.3  wl_socket.3  wl_socket_init_for_display_name.3
wayland-1.13.0/doc/man/: Makefile  Makefile.in
wayland-1.13.0/doc/publican/: Makefile  Makefile.in
wayland-1.13.0/protocol/: .gitignore
wayland-1.13.0/src/: .gitignore  dtddata.S  wayland-client-uninstalled.pc  wayland-client.c  wayland-client.pc  wayland-scanner-uninstalled.pc  wayland-scanner.pc  wayland-server-uninstalled.pc  wayland-server.pc
wayland-classes/: Buffer.h  CMakeLists.txt  Callback.cpp  Callback.h  Compositor.cpp  Compositor.h  Cursor.cpp  Cursor.h  Display.cpp  Display.h  IKeyboardListener.h  IPointerListener.h  IRegistryListener.h  ISeatListener.h  ITouchListener.h  Keyboard.cpp  Keyboard.h  Pointer.cpp  Pointer.h  Region.cpp  Region.h  Registry.cpp  Registry.h  Seat.cpp  Seat.h  Shm.cpp  Shm.h  ShmPool.cpp  ShmPool.h  Surface.cpp  Surface.h  Touch.cpp  Touch.h
wayland-demo1/: Application.h  CMakeLists.txt  main.cpp
wayland-demo2/: Application.cpp  CMakeLists.txt  main.cpp
wayland-protocols-1.7/: .gitignore  CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.status  configure  wayland-protocols.pc
westeros/: .gitignore  CMakeLists.txt  symlink.cmake  westeros-compositor.cpp  westeros-compositor.pc  westeros-nested.cpp  westeros-render-embedded.cpp  westeros-render-gl.cpp
westeros/drm/westeros-gl/: westeros-gl.c
westeros/kylin/westeros-gl/: westeros-gl.c  westeros-gl.cpp  westeros-gl.h  westeros-render-rtd1295.cpp
westeros/protocol/: .gitignore
westeros/protocol/version4/: .gitignore
westeros/protocol/version5/: .gitignore
westeros/rpi/westeros-gl/: westeros-gl.cpp
westeros/simplebuffer/protocol/: .gitignore
westeros/simpleshell/protocol/: .gitignore
weston-1.12.0/: CMakeLists.txt  Makefile.in  config.h  config.h.in  configure  weston.ini
weston-1.12.0/compositor/: .gitignore
weston-1.12.0/libweston/: git-version.h  version.h
weston-2.0.0/: CMakeLists.txt  config.h  uninstall.cmake.in
weston-2.0.0/libweston/: .gitignore
weston-2.0.0/libweston-desktop/: .gitignore
weston-simple-demo/: CMakeLists.txt
weston-simple-egl/: Application.cpp  Application.h  CMakeLists.txt  EGLWindow.cpp  EGLWindow.h  Geometry.h  IIVISurfaceListener.h  IVIApplication.cpp  IVIApplication.h  IVISurface.cpp  IVISurface.h  IZXDGShellV6Listener.h  IZXDGSurfaceV6Listener.h  IZXDGTopLevelV6Listener.h  SignalHandler.cpp  SignalHandler.h  ZXDGShellV6.cpp  ZXDGShellV6.h  ZXDGSurfaceV6.cpp  ZXDGSurfaceV6.h  ZXDGTopLevelV6.cpp  ZXDGTopLevelV6.h  main.cpp  simple-egl.c
weston-simple-egl/shared/: helpers.h  platform.h
weston-simple-gl/: CMakeLists.txt
weston-texture/: CMakeLists.txt  main.cpp  tutorial05.cpp
