cmake_minimum_required(VERSION 3.5.1)
project(weston-apps)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

include(platform)
include(list_to_string)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_COLOR_MAKEFILE   ON)

if(CMAKE_BUILD_TYPE)
    message(STATUS "Current build type: ${CMAKE_BUILD_TYPE}")
else()
    message(STATUS "Setting build to Debug")
    set(CMAKE_BUILD_TYPE "Debug" CACHE STRING
        "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel." FORCE)
endif()
if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    set(CONFIG_DIR "debug" CACHE STRING "Build config directory" FORCE)
elseif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
    set(CONFIG_DIR "release" CACHE STRING "Build config directory" FORCE)
elseif(${CMAKE_BUILD_TYPE} STREQUAL "MinSizeRel")
    set(CONFIG_DIR "releaseMinSize" CACHE STRING "Build config directory" FORCE)
elseif(${CMAKE_BUILD_TYPE} STREQUAL "RelWithDebInfo")
    set(CONFIG_DIR "releaseMinSize" CACHE STRING "Build config directory" FORCE)
else()
    message(FATAL_ERROR "Invalid build type: " ${CMAKE_BUILD_TYPE})
endif()

set(BUILD_BASE_DIR ${CMAKE_SOURCE_DIR}/build CACHE STRING
    "Build root directory.")
set(CMAKE_BINARY_DIR ${BUILD_BASE_DIR}/${CONFIG_DIR} CACHE STRING
    "Build directory.")
message(STATUS "Build base directory: " ${BUILD_BASE_DIR})
message(STATUS "Build config directory: " ${CMAKE_BINARY_DIR})

set(OUTPUT_BASE_DIR ${CMAKE_SOURCE_DIR}/output)
message(STATUS "Output base directory: " ${OUTPUT_BASE_DIR})

if (NOT "${CMAKE_SYSROOT}" STREQUAL "")
    list(APPEND SYSTEM_INCLUDES -I/usr/include)
    list(APPEND SYSTEM_INCLUDES -I/usr/include/x86_64-linux-gnu)
    list_to_string(SYSTEM_INCLUDES CMAKE_CXX_FLAGS)
    message(STATUS "Add directories CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
    list_to_string(SYSTEM_INCLUDES CMAKE_C_FLAGS)
    message(STATUS "Add directories CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
    list(APPEND SYSTEM_LIBRARY_PATH -Wl,-rpath=${CMAKE_SYSROOT}/lib)
    list(APPEND SYSTEM_LIBRARY_PATH -Wl,-rpath=${CMAKE_SYSROOT}/usr/lib)
    list(APPEND SYSTEM_LIBRARY_PATH -Wl,-rpath=/usr/lib)
    list(APPEND SYSTEM_LIBRARY_PATH -Wl,-rpath=/usr/lib/x86_64-linux-gnu)
    list(APPEND SYSTEM_LIBRARY_PATH -Wl,-rpath=/lib)
    list(APPEND SYSTEM_LIBRARY_PATH -Wl,-rpath=/lib/x86_64-linux-gnu)
    list(APPEND SYSTEM_LIBRARY_PATH -Wl,-verbose)
    list(APPEND SYSTEM_LIBRARY_PATH -L/usr/lib)
    list(APPEND SYSTEM_LIBRARY_PATH -L/usr/lib/x86_64-linux-gnu)
    list(APPEND SYSTEM_LIBRARY_PATH -L/lib)
    list(APPEND SYSTEM_LIBRARY_PATH -L/lib/x86_64-linux-gnu)
    list_to_string(SYSTEM_LIBRARY_PATH CMAKE_EXE_LINKER_FLAGS)
    message(STATUS "Add directories CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")
endif()
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_BASE_DIR}/lib)
#message(STATUS "Static lib output directory:  " ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_BASE_DIR}/bin)
#message(STATUS "Dynamic lib output directory: " ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BASE_DIR}/bin)
#message(STATUS "Executable output directory:  " ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_subdirectory(weston-simple-demo)
add_subdirectory(weston-simple-gl)
add_subdirectory(weston-texture)
add_subdirectory(hello-wayland)
add_subdirectory(hello-wayland-org)
add_subdirectory(wayland-protocols-1.7)
#add_subdirectory(ogl-OpenGL-tutorial_0015_21)
